--- a/index.html
+++ b/index.html
@@ -3,19 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Zaktai - AI Automation Agency helping businesses scale smarter." />
-    <title>Zaktai - Let AI Handle It</title>
+    <title>Zaktai | Reinvent How You Work</title>
     <link rel="stylesheet" href="style.css" />
-
-    <!-- SEO Tags -->
-    <meta name="keywords" content="AI Automation, Chatbots, Business AI, Zaktai, Automation Agency" />
-    <meta property="og:title" content="Zaktai - AI Automation Agency" />
-    <meta property="og:description" content="Let AI Handle It. We automate workflows and scale businesses." />
-    <meta property="og:url" content="https://zaktai.com" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -31,14 +20,14 @@
     <header>
       <div class="nav-container">
         <div class="logo">
-          <a href="#">
-            <img src="assets/logo.png" alt="Zaktai Logo" />
+          <a href="#"
+            ><img src="assets/logo.png" alt="Zaktai Logo" />
             <h1>Zaktai</h1>
           </a>
         </div>
         <nav>
           <ul class="nav-links" id="navLinks">
-            <li><a href="#Home">Home</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About Us</a></li>
@@ -47,129 +36,104 @@
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
-            <div class="line4"></div>
           </div>
         </nav>
       </div>
     </header>
 
     <!-- HERO SECTION -->
-    <section id="hero" class="home">
-      <div class="hero-content">
-        <h1>Zaktai - Let AI Handle It</h1>
+    <section id="hero">
+      <div class="hero-content animate">
+        <h1>Reinvent How You Work — With AI</h1>
         <p>
-          We help businesses automate workflows, boost efficiency, and scale effortlessly using intelligent solutions
-          tailored to your needs.
+          At Zaktomate, we’re not just another AI tool provider, <br />we’re your partner in building a smarter, faster,
+          more scalable business.
         </p>
-        <a href="#services" class="btn">Explore Our Services</a>
+        <a href="#services" class="btn">Unleash The Power of AI</a>
       </div>
     </section>
 
     <!-- SERVICES SECTION -->
-    <section id="services">
-      <div class="container">
-        <h2>Our AI Automation Services</h2>
-        <div class="cards">
-          <div class="card">
-            <h3>Lead Generation Bots</h3>
-            <p>Capture and qualify leads 24/7 using AI chatbots integrated with Messenger and web platforms.</p>
-          </div>
-          <div class="card">
-            <h3>Document Automation</h3>
-            <p>Auto-generate presentations, reports, and insights from PDFs, forms, and raw data.</p>
-          </div>
-          <div class="card">
-            <h3>Workflow Automation</h3>
-            <p>Automate your sales, HR, or support pipelines using AI-driven process logic.</p>
-          </div>
-          <div class="card">
-            <h3>Custom AI Integration</h3>
-            <p>Tailor-made AI deployments for unique business challenges—built, tested, and maintained by Zaktai.</p>
-          </div>
+    <section id="services" class="container section-offset">
+      <h2>What Zaktai Offers</h2>
+      <div class="cards">
+        <div class="card animate">
+          <h2>ZakDeck</h2>
+          <p class="tagline">Create Professional Slide Decks in Minutes, Powered by ZakDeck</p>
+          <p>
+            Transform your content into clean, editable, and visually appealing slide decks instantly. ZakDeck uses AI
+            to automate slide creation, helping you save time and increase efficiency.
+          </p>
+          <a href="#" class="btn">Try ZakDeck</a>
+        </div>
+        <div class="card animate">
+          <h2>Zakbot</h2>
+          <p class="tagline">24/7 Intelligent Chatbot Support That’s Customized to Your Business Needs</p>
+          <p>
+            Automate customer and student interactions with Zakbot, an AI chatbot tailored specifically to your business
+            — delivering instant, personalized answers anytime.
+          </p>
+          <a href="#" class="btn">See Zakbot in Action</a>
+        </div>
+        <div class="card premium animate">
+          <h2>Custom</h2>
+          <p class="tagline">AI That’s Built Just for You — Starting with a Free Business Audit</p>
+          <p>
+            Every business is unique, and so should be your AI. We kick off by understanding your challenges and goals,
+            then craft smart AI tools tailored to help your team work smarter, faster, and stress-free.
+          </p>
+          <a href="#" class="btn">Let’s Discover Your AI Solution</a>
         </div>
       </div>
     </section>
 
     <!-- PRICING SECTION -->
-    <section id="pricing">
-      <div class="container">
-        <h2>Plans that Scale with You</h2>
-        <div class="pricing-grid">
-          <div class="pricing-card">
-            <h3>Starter</h3>
-            <p class="price">$49/mo</p>
-            <ul>
-              <li>1 AI Bot</li>
-              <li>Email Support</li>
-              <li>Basic Workflows</li>
-            </ul>
-          </div>
-          <div class="pricing-card popular">
-            <h3>Pro</h3>
-            <p class="price">$149/mo</p>
-            <ul>
-              <li>3 AI Bots</li>
-              <li>Priority Support</li>
-              <li>Custom Workflow Setup</li>
-            </ul>
-          </div>
-          <div class="pricing-card">
-            <h3>Enterprise</h3>
-            <p class="price">Custom</p>
-            <ul>
-              <li>Unlimited Bots</li>
-              <li>Dedicated Consultant</li>
-              <li>End-to-End Integration</li>
-            </ul>
-          </div>
-        </div>
+    <section id="pricing" class="pricing-teaser animate">
+      <h2>Transparent Pricing, Built for Ambitious Teams</h2>
+      <p>
+        From ed-techs to SMEs, our AI-powered solutions start at just BDT 5,000/month — with free trials and 50% off
+        your first month.
+      </p>
+      <div class="badges">
+        <span class="badge">50% OFF – Limited Time</span>
+      </div>
+      <div class="cta-buttons">
+        <a href="#" class="btn">View Packages</a>
+        <a href="#contact" class="btn secondary">Start Free Trial</a>
       </div>
     </section>
 
     <!-- ABOUT SECTION -->
-    <section id="about">
-      <div class="container">
-        <h2>About Zaktai</h2>
-        <p>
-          We are a Dhaka-based AI Automation Agency helping modern businesses transition into the era of intelligent
-          operations. Whether you're a startup or an enterprise, our AI systems are built to scale your growth, reduce
-          friction, and simplify workflows.
-        </p>
-      </div>
+    <section id="about" class="container animate">
+      <h2>About Zaktai</h2>
+      <p>
+        We are a Dhaka-based AI Automation Agency helping modern businesses transition into the era of intelligent
+        operations. Whether you're a startup or an enterprise, our AI systems are built to scale your growth, reduce
+        friction, and simplify workflows.
+      </p>
     </section>
 
     <!-- CONTACT FORM -->
-    <section id="contact">
-      <div class="container">
-        <h2>Contact Us</h2>
-        <form action="https://formspree.io/f/mvgrlkvl" method="POST">
-          <input type="text" name="name" placeholder="Your Name" required />
-          <input type="email" name="_replyto" placeholder="Your Email" required />
-          <textarea name="message" placeholder="Your Message" required></textarea>
-          <button type="submit" class="btn">Send Message</button>
-        </form>
-      </div>
+    <section id="contact" class="container animate">
+      <h2>Book a Free Trial or Meeting</h2>
+      <form action="https://formspree.io/f/mvgrlkvl" method="POST">
+        <input type="text" name="name" placeholder="Full Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <input type="tel" name="phone" placeholder="Phone" required />
+        <input type="text" name="company" placeholder="Company/Institution" />
+        <input type="date" name="meeting" />
+        <textarea name="services" placeholder="What services are you interested in? (Optional)"></textarea>
+        <button type="submit" class="btn">Book My Free Trial</button>
+      </form>
     </section>
 
     <!-- FOOTER -->
     <footer>
       <div class="container">
-        <p>&copy; 2025 Zaktai. All rights reserved.</p>
-        <p>Email: <a href="mailto:support@zaktai.com">support@zaktai.com</a></p>
-        <div class="socials">
-          <a href="https://facebook.com/YOUR_PAGE" target="_blank">Facebook</a> |
-          <a href="https://linkedin.com/company/zaktai" target="_blank">LinkedIn</a>
-        </div>
+        <p>&copy; 2025 Zaktai. All rights reserved. | Secured by 256-bit SSL Encryption</p>
       </div>
     </footer>
-    <script>
-      const burger = document.getElementById("burger");
-      const navLinks = document.getElementById("navLinks");
-
-      burger.addEventListener("click", () => {
-        navLinks.classList.toggle("nav-active");
-        burger.classList.toggle("toggle");
-      });
-    </script>
+    <script src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
