Edited zaktai to zaktomate

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zaktai | Reinvent How You Work</title>
+    <title>Zaktomate | Reinvent How You Work</title>
     <link rel="stylesheet" href="style.css" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
     <script>
@@ -21,8 +21,8 @@
       <div class="nav-container">
         <div class="logo">
           <a href="#"
-            ><img src="assets/logo.png" alt="Zaktai Logo" />
-            <h1>Zaktai</h1>
+            ><img src="assets/logo.png" alt="Zaktomate Logo" />
+            <h1>Zaktomate</h1>
           </a>
         </div>
         <nav>
@@ -55,7 +55,7 @@
 
     <!-- SERVICES SECTION -->
     <section id="services" class="container section-offset">
-      <h2>What Zaktai Offers</h2>
+      <h2>What Zaktomate Offers</h2>
       <div class="cards">
         <div class="card animate">
           <h2>ZakDeck</h2>
@@ -105,7 +105,7 @@
 
     <!-- ABOUT SECTION -->
     <section id="about" class="container animate">
-      <h2>About Zaktai</h2>
+      <h2>About Zaktomate</h2>
       <p>
         We are a Dhaka-based AI Automation Agency helping modern businesses transition into the era of intelligent
         operations. Whether you're a startup or an enterprise, our AI systems are built to scale your growth, reduce
