Added working chatbot and updated UI

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             Transform your content into clean, editable, and visually appealing slide decks instantly. ZakDeck uses AI
             to automate slide creation, helping you save time and increase efficiency.
           </p>
-          <a href="#" class="btn">Try ZakDeck</a>
+          <a class="btn">N/A (Under Production)</a>
         </div>
         <div class="card animate">
           <h2>Zakbot</h2>
@@ -73,7 +73,7 @@
             Automate customer and student interactions with Zakbot, an AI chatbot tailored specifically to your business
             — delivering instant, personalized answers anytime.
           </p>
-          <a href="#" class="btn">See Zakbot in Action</a>
+          <a href="#zakbot-demo" class="btn">See Zakbot in Action</a>
         </div>
         <div class="card premium animate">
           <h2>Custom</h2>
@@ -82,8 +82,17 @@
             Every business is unique, and so should be your AI. We kick off by understanding your challenges and goals,
             then craft smart AI tools tailored to help your team work smarter, faster, and stress-free.
           </p>
-          <a href="#" class="btn">Let’s Discover Your AI Solution</a>
+          <a href="#contact" class="btn">Let’s Discover Your AI Solution</a>
         </div>
+      </div>
+    </section>
+
+    <!-- Demo Section -->
+    <section id="zakbot-demo" class="container animate">
+      <h2>Live Zakbot Demo</h2>
+      <p>Try out how Zakbot answers real questions using our AI system.</p>
+      <div class="zakbot-iframe-container">
+        <iframe src="zakbot.html" width="100%" height="500" style="border: none; border-radius: 10px"></iframe>
       </div>
     </section>
 
@@ -98,7 +107,7 @@
         <span class="badge">50% OFF – Limited Time</span>
       </div>
       <div class="cta-buttons">
-        <a href="#" class="btn">View Packages</a>
+        <a href="opsmate.html#plans" class="btn">View Packages</a>
         <a href="#contact" class="btn secondary">Start Free Trial</a>
       </div>
     </section>
